# Vpm

./: .gitignore  VPM.md  main.py  pyproject.toml  vindex.toml
cmds/: __init__.py  _utils.py  add.py  base.py  cmd_add.py  cmd_del.py  cmd_list.py  cmd_prune.py  cmd_search.py  utils.py
