[project]
name = "vpm"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.46",
    "rich>=15.0.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ruff>=0.15.12",
]
